<resources>
    <string name="app_name">DishDive</string>
    <string name="DishDive">Dish Dive</string>
    <string name="slogan">Savor Every Flavor, Your Way!</string>
    <string name="login">Login</string>
    <string name="orloginWith">Or Login With</string>
    <string name="donthaveaccount">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="guest">As Guest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="plan">Plan</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="randomMeal">Have A Nice Daily Meal !</string>
    <string name="popular">Popular Meal!</string>
    <string name="instructions">- Instructions</string>
    <string name="area_egypt">Area : Egypt</string>
    <string name="catogry_beef">Catogry : Beef</string>
    <string name="add_to_calender">Add to Calender</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="my_saved_recipes">My Saved Recipes</string>
    <string name="my_plan">My Plan</string>
    <string name="saturday">Saturday</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="choose_day">Choose Day</string>
    <string name="thursday">Thursday</string>
    <string name="welcome">Welcome Back!</string>
    <string name="country">Country</string>
    <string name="ingredient">Ingredient</string>
    <string name="category">Category</string>
    <string name="choose_your_meal">Choose Your Meal :</string>
    <string name="personalized_recipe_discovery">Personalized Recipe Discovery</string>
    <string name="tell_us_your_food_preferences_and_we_ll_serve_you_delicious_recipes_ideas">Tell us your food preferences and we ‘ll serve you delicious recipes ideas.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="favorite_finds">Favorite Finds</string>
    <string name="save_your_top_picks_and_easily_access_them_whenever_you_crave_a_delightful_meal">Save your top picks and easily access them whenever you crave a delightful meal.</string>
    <string name="weekly_culinary_agenda">Weekly Culinary Agenda</string>
    <string name="plan_your_week_with_a_personalized_food_itinerary_enjoy_a_week_full_of_scrumptious_delights">Plan your week with a personalized food itinerary. Enjoy a week full of scrumptious delights!</string>
    <string name="get_started">Get Started</string>
    <string name="google">1062086965572-kcmuf6pkf9tb0q4cv7cpmos8ajlukr2v.apps.googleusercontent.com</string>
    <string name="backUp">Backup</string>
</resources>