<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".login.view.LoginScreen">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/secondary"
        android:gravity="center"
        android:text="@string/DishDive"
        android:textColor="@color/primary"
        android:textColorLink="@color/primary"
        android:textSize="75sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/secondary"
        android:gravity="center"
        android:text="@string/slogan"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="27dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:ems="10"
            android:padding="5dp"
            android:fontFamily="@font/regular"
            android:hint="Email address"
            android:inputType="textEmailAddress" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="27dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1">

        <EditText
            android:id="@+id/textPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:hint="Password"
            android:padding="5dp"
            android:inputType="textPassword" />

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/regular"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/btnGuest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/regular"
        android:text="@string/orloginWith"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <ImageButton
        android:id="@+id/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/flat_google" />

    <ImageButton
        android:id="@+id/btnFaceBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGoogle"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/logos_facebook" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/regular"
        android:text="@string/donthaveaccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />

    <TextView
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="99dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/regular"
        android:text="@string/signup"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <Button
        android:id="@+id/btnGuest"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="@font/regular"
        android:text="@string/guest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toTopOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>