<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".onboard.view.OnBoardTwoFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView4"
        android:layout_width="414dp"
        android:layout_height="500dp"
        android:scaleType="centerCrop"
        android:src="@drawable/onboard_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/customShape" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="110dp"
        android:backgroundTint="@color/accent"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/favorite_finds"
                android:fontFamily="@font/regular"
                android:textStyle="bold"
                android:textColor="@color/secondary"
                android:gravity="bottom"
                android:paddingStart="120dp"
                android:textSize="24sp"
                android:layout_weight="1"
                android:paddingBottom="0dp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/save_your_top_picks_and_easily_access_them_whenever_you_crave_a_delightful_meal"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:textColor="@color/secondary"
                android:paddingTop="0dp"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="2">
                <Button
                    android:id="@+id/btnSkip2"
                    android:layout_width="0dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/skip"
                    android:textColor="@color/accent"
                    android:backgroundTint="@color/secondary"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnNext2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="20dp"
                    android:text="@string/next"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/accent"
                    android:backgroundTint="@color/secondary"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>