<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboard.view.OnBoardOneFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView4"
        android:layout_width="414dp"
        android:layout_height="500dp"
        android:scaleType="centerCrop"
        android:src="@drawable/on_board_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/customShape" />


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/accent"
        app:cardCornerRadius="50dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/personalized_recipe_discovery"
                android:fontFamily="@font/regular"
                android:textStyle="bold"
                android:textColor="@color/secondary"
                android:gravity="bottom"
                android:paddingStart="26dp"
                android:textSize="24sp"
                android:layout_weight="1"
                android:paddingBottom="0dp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/tell_us_your_food_preferences_and_we_ll_serve_you_delicious_recipes_ideas"
                android:layout_weight="1"
                android:fontFamily="@font/regular"
                android:textColor="@color/secondary"
                android:paddingTop="0dp"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="2"
                android:layout_gravity="center|bottom">
                <Button
                    android:id="@+id/btnSkip1"
                    android:layout_width="0dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/skip"
                    android:textColor="@color/accent"
                    android:backgroundTint="@color/secondary"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnNext1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="20dp"
                    android:text="@string/next"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/accent"
                    android:backgroundTint="@color/secondary"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
