<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".login.view.LoginScreen">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/secondary"
        android:gravity="center"
        android:text="@string/DishDive"
        android:textColor="@color/primary"
        android:textColorLink="@color/primary"
        android:textSize="75sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/secondary"
        android:gravity="center"
        android:text="@string/slogan"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="27dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <EditText
            android:id="@+id/textEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:ems="10"
            android:hint="Email address"
            android:inputType="textEmailAddress"
            android:padding="5dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="27dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card2">

        <EditText
            android:id="@+id/textPassRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="5dp" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="27dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card3">

        <EditText
            android:id="@+id/textConfirmPassRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:ems="10"
            android:hint="Confirm password"
            android:inputType="textPassword"
            android:padding="5dp" />
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:text="@string/register"
        app:layout_constraintEnd_toStartOf="@+id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card4" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="80dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRegister"
        app:layout_constraintTop_toTopOf="@+id/btnRegister" />


</androidx.constraintlayout.widget.ConstraintLayout>